--- a/src/env/.env.development
+++ b/src/env/.env.development
@@ -1,10 +1,11 @@
-    ## 开发环境配置	
-
-## 本地运行路径 这个不能变
+# 开发环境配置	
+# 本地运行路径 这个不能变
 VITE_PUBLIC_PATH='./'
 
-## 项目名称    
+# 项目名称    
 VITE_APP_BASE_NAME='Vulhub'	
 
-## 如需其它配置项可自定义   但必须是VITE_APP_开头
-
+# 如需其它配置项可自定义   但必须是VITE_APP_开头
+VITE_APP_API_URL='http://localhost:9999'
+# 单点登录
+VITE_APP_OOS_URL='https://172.26.1.10/login?service=http://localhost:8818'
