前后端聚合

--- a/src/env/.env.production
+++ b/src/env/.env.production
@@ -9,3 +9,5 @@ VITE_APP_BASE_NAME='Vulhub'
 VITE_APP_API_URL='http://localhost:9999'
 # 单点登录
 VITE_APP_OOS_URL='https://172.26.1.10/login?service=http://localhost:9999'
+# 单点退出
+VITE_APP_OOS_LOGOUT_URL='https://172.26.1.10/logout'
