--- a/src/env/.env.development
+++ b/src/env/.env.development
@@ -8,6 +8,8 @@ VITE_APP_BASE_NAME='Vulhub'
 # 如需其它配置项可自定义   但必须是VITE_APP_开头
 #VITE_APP_API_URL='http://localhost:9999'
 VITE_APP_API_URL='http://192.168.31.43:9999'
+# 前端地址
+VITE_APP_FRONT_API_URL='http://localhost:8818'
 # 单点登录
 VITE_APP_OOS_URL='https://172.26.1.10/login?service=http://localhost:8818'
 # 单点退出
