--- a/src/env/.env.production
+++ b/src/env/.env.production
@@ -6,9 +6,9 @@ VITE_PUBLIC_PATH='/'
 VITE_APP_BASE_NAME='Vulhub'	
 
 # 如需其它配置项可自定义   但必须是VITE_APP_开头
-VITE_APP_API_URL='http://localhost:9999'
+VITE_APP_API_URL='http://skygoat.app.x'
 # 前端地址
-VITE_APP_FRONT_API_URL='http://localhost:9999'
+VITE_APP_FRONT_API_URL='http://skygoat.app.x'
 # 单点登录
 VITE_APP_OOS_URL='https://172.26.1.10/login?service=http://localhost:9999'
 # 单点退出
