--- a/src/env/.env.production
+++ b/src/env/.env.production
@@ -10,6 +10,6 @@ VITE_APP_API_URL='http://skygoat.app.x'
 # 前端地址
 VITE_APP_FRONT_API_URL='http://skygoat.app.x'
 # 单点登录
-VITE_APP_OOS_URL='https://172.26.1.10/login?service=http://localhost:9999'
+VITE_APP_OOS_URL='https://172.26.1.10/login?service=http://skygoat.app.x'
 # 单点退出
 VITE_APP_OOS_LOGOUT_URL='https://172.26.1.10/logout'
